Shop - реализован элементарный поиск товаров (по имени или конечной категории)

--- a/design/html/index.html
+++ b/design/html/index.html
@@ -24,6 +24,10 @@
 
             
             <div class="header_grid">
+                <form>
+                    <input type="text" class="input_search">
+                    <input type="submit" value="Поиск" class="button_search">
+                </form>
                 <div class="button_header">Корзина</div>
             </div>
         </div>
